# Parking-Lot-Car-Segmentation

./: LICENSE  README.md
Parking Lot Analysis/: CMakeLists.txt  Car_Segmentation.cpp  Main.cpp  ParkingLotAnalysis.sln  ParkingLotAnalysis.vcxproj  ParkingLotAnalysis.vcxproj.filters  Parking_Space_Detection_Hough_Line.cpp  data_preparation.cpp  data_preparation.h
